DDI-Lifecycle/3.2/model/_sources/topics/All Content Items/index.rst.txt
All Content Items
-----------------



Item Types
**********

DDI32 has 102 item types related to All Content Items.

.. toctree::
   :maxdepth: 1

   ../../item-types/GeographicStructure/index
   ../../item-types/GeographicLocation/index
   ../../item-types/QualityStatementScheme/index
   ../../item-types/QualityStatementGroup/index
   ../../item-types/QualityStatement/index
   ../../item-types/ManagedRepresentationScheme/index
   ../../item-types/ManagedRepresentationGroup/index
   ../../item-types/ManagedTextRepresentation/index
   ../../item-types/ManagedDateTimeRepresentation/index
   ../../item-types/ManagedNumericRepresentation/index
   ../../item-types/ManagedScaleRepresentation/index
   ../../item-types/ManagedMissingValuesRepresentation/index
   ../../item-types/DDIInstance/index
   ../../item-types/Archive/index
   ../../item-types/OrganizationScheme/index
   ../../item-types/OrganizationGroup/index
   ../../item-types/Organization/index
   ../../item-types/Individual/index
   ../../item-types/Relation/index
   ../../item-types/Comparison/index
   ../../item-types/GenericMap/index
   ../../item-types/RepresentationMap/index
   ../../item-types/DataCollection/index
   ../../item-types/Methodology/index
   ../../item-types/ProcessingEventScheme/index
   ../../item-types/ProcessingEventGroup/index
   ../../item-types/ProcessingEvent/index
   ../../item-types/ProcessingInstructionScheme/index
   ../../item-types/ProcessingInstructionGroup/index
   ../../item-types/GeneralInstruction/index
   ../../item-types/GenerationInstruction/index
   ../../item-types/InterviewerInstructionScheme/index
   ../../item-types/InstructionGroup/index
   ../../item-types/Instruction/index
   ../../item-types/InstrumentScheme/index
   ../../item-types/InstrumentGroup/index
   ../../item-types/Instrument/index
   ../../item-types/ControlConstructScheme/index
   ../../item-types/ControlConstructGroup/index
   ../../item-types/IfThenElse/index
   ../../item-types/RepeatUntil/index
   ../../item-types/RepeatWhile/index
   ../../item-types/Loop/index
   ../../item-types/Sequence/index
   ../../item-types/ComputationItem/index
   ../../item-types/StatementItem/index
   ../../item-types/QuestionScheme/index
   ../../item-types/QuestionItem/index
   ../../item-types/QuestionBlock/index
   ../../item-types/QuestionGroup/index
   ../../item-types/QuestionGrid/index
   ../../item-types/QuestionConstruct/index
   ../../item-types/Weighting/index
   ../../item-types/LogicalProduct/index
   ../../item-types/CategoryScheme/index
   ../../item-types/CategoryGroup/index
   ../../item-types/Category/index
   ../../item-types/CodeListScheme/index
   ../../item-types/CodeList/index
   ../../item-types/CodeListGroup/index
   ../../item-types/VariableScheme/index
   ../../item-types/Variable/index
   ../../item-types/VariableGroup/index
   ../../item-types/NCubeScheme/index
   ../../item-types/NCube/index
   ../../item-types/DataRelationship/index
   ../../item-types/NCubeGroup/index
   ../../item-types/RepresentedVariableScheme/index
   ../../item-types/RepresentedVariableGroup/index
   ../../item-types/RepresentedVariable/index
   ../../item-types/ConceptualComponent/index
   ../../item-types/ConceptScheme/index
   ../../item-types/UniverseScheme/index
   ../../item-types/UniverseGroup/index
   ../../item-types/ConceptGroup/index
   ../../item-types/Concept/index
   ../../item-types/ConceptualVariable/index
   ../../item-types/ConceptualVariableScheme/index
   ../../item-types/ConceptualVariableGroup/index
   ../../item-types/Universe/index
   ../../item-types/SubUniverseClass/index
   ../../item-types/GeographicStructureScheme/index
   ../../item-types/GeographicStructureGroup/index
   ../../item-types/GeographicLocationScheme/index
   ../../item-types/GeographicLocationGroup/index
   ../../item-types/DataSet/index
   ../../item-types/PhysicalDataProduct/index
   ../../item-types/PhysicalStructureScheme/index
   ../../item-types/PhysicalStructure/index
   ../../item-types/PhysicalStructureGroup/index
   ../../item-types/RecordLayoutScheme/index
   ../../item-types/RecordLayoutGroup/index
   ../../item-types/RecordLayout/index
   ../../item-types/DDIProfile/index
   ../../item-types/ResourcePackage/index
   ../../item-types/Group/index
   ../../item-types/SubGroup/index
   ../../item-types/LocalHoldingPackage/index
   ../../item-types/PhysicalInstance/index
   ../../item-types/VariableStatistics/index
   ../../item-types/StudyUnit/index
   ../../item-types/QualityStandard/index

